Modification du style des details

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <p class="text">Hello world !!</p>
     <br><br>
     <input type="range" name="progress" id="progress" min="0" max="100" value="50">
+    <br>
     <progress value="50" max="100"></progress>
     <br><br>
     <details>
-        <summary>Element déroulant</summary>
-        C'est un élément qui se déroule !
+        <summary>Element déroulant 1</summary>
+        <div>C'est un élément qui se déroule !</div>
     </details>
+    <details>
+        <summary>Element déroulant 2</summary>
+        <div>C'est un élément qui se déroule !</div>
+    </details><details>
+        <summary>Element déroulant 3</summary>
+        <div>C'est un élément qui se déroule !</div>
+    </details>
+
     <br><br>
     <dialog open>
         <p>Ceci est une boite de dialogue</p>
